# aquarium-triggerfish

./: CMakeLists.txt  CREDITS.md  LICENSE  README.md
.github/workflows/: cmake.yml  memcheck.yml
cmake/: FetchAquariumCMocka.cmake  FetchAquariumCoral.cmake  FetchAquariumSeaUrchin.cmake  FetchAquariumSeagrass.cmake  FetchCMocka.cmake
doc/: Conventions.md
include/: triggerfish.h
include/triggerfish/: error.h  strong.h  weak.h
src/: error.c  strong.c  triggerfish.c  weak.c
src/private/: strong.h  weak.h
src/test/: cmocka.c  cmocka.h
test/: test_strong.c  test_triggerfish.c  test_weak.c
